--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
 </head>
   <body class="bg-background text-text-primary">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
